--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
+    <header style="background-color:#212121;">
       <h1>
      <a href="./index.html">   Webstudio
 
@@ -25,18 +25,19 @@
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a> 
         </li>
-        <li><a href="tell:+38 096 111 11 11"></a>+38 096 111 11 11</li>
+        <li style="color: white;"><a href="tell:+38 096 111 11 11"></a>+38 096 111 11 11</li>
       </ul>
 
-    </header>
+    
     <main>
       <section>
-        <h1>
+        <h1 style="color: white;">
         Ефективні рішення для<br/>
         вашого бізнесу
       </h1>
 
-      <button>Замовити послугу</button></section>
+      <button style="background-color: #2196F3;">Замовити послугу</button></section>
+    </header>
       <ul>
         <li>УВАГА ДО ДЕТАЛЕЙ
         
@@ -57,28 +58,28 @@
 
       <h3>Чим ми займаємося</h3>
 
-      <img src="./img/клавіатура.jpg" alt="f" />
-      <img src="./img/ноут.jpg" alt="f" />
-      <img src="./img/планшет.jpg" alt="f" />
+      <img src="./img/клава.jpg" alt="f" />
+      <img src="./img/тел.jpg" alt="f" />
+      <img src="./img/план.jpg" alt="f" />
 
       <p><b>наша команда</b></p>
-      <img src="./img/святослав.jpg" alt="f" />
+      <img src="./img/ігор.jpg" alt="f" />
       <p><b>Ігор Дем'яненко</b></p>
       <p>Product Designer</p>
-      <img src="./img/єгор.jpg" alt="f" />
+      <img src="./img/ольга.jpg" alt="f" />
       <p><b>Ольга Рєпіна</b></p>
       <p>Frontend Developer</p>
-      <img src="./img/марина.jpg" alt="f" />
+      <img src="./img/тарас.jpg" alt="f" />
       <p><b>Микола Тарасов</b></p>
       <p>Marketing</p>
-      <img src="./img/ігор.jpg" alt="f" />
+      <img src="./img/міша.jpg" alt="f" />
       <p><b>Михайло Єрмаков</b></p>
       <p>UI Designer</p>
     </main>
-    <footer>
-      <address>
+    <footer style="background-color: #212121;"> 
+      <address style="color: white;">
         WebStudio<br />м. Київ, пр-т Лесі Українки,<br />
-        26 info@devstudio.com +38 096 111 11 11
+        26 info@WebStudio.com +38 096 111 11 11
       </address>
     </footer>
   </body>
