--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,72 @@
         <li>
           <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li><a href="tell:+38 096 111 11 11"></a>+38 096 111 11 11</li>
+        <li><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <main>
+      <ul>
+        <li><button>Усі</button></li>
+        <li><button>Веб-сайти</button></li>
+        <li><button>Додатки</button></li>
+        <li><button>Дизайн</button></li>
+        <li><button>Маркетинг</button></li>
+      </ul>
+      <ul>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <p></p>
+          <p></p>
+        </li>
+      </ul>
+    </main>
+    <footer>
+      <a href="./index.html"> Webstudio </a>
+      <address>
+        м. Київ, пр-т Лесі Українки,<br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+        <a href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
+      </address>
+    </footer>
   </body>
 </html>
