--- a/portfolio.html
+++ b/portfolio.html
@@ -39,49 +39,49 @@
       </ul>
       <ul>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/22.jpg" alt="f" />
+          <p>Технокряк</p>
+          <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/акула.jpg" alt="f" />
+          <p>Постер New Orlean vs Golden Star</p>
+          <p>Дизайн</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/ресторан.jpg" alt="f" />
+          <p>Ресторан Seafood</p>
+          <p>Додаток</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/наушники.jpg" alt="f" />
+          <p>Проєкт Prime</p>
+          <p>Маркетинг</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/коробки.jpg" alt="f" />
+          <p>Проєкт Boxes</p>
+          <p>Додаток</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/монітор.jpg" alt="f" />
+          <p>Inspiration has no Borders</p>
+          <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/книга.jpg" alt="f" />
+          <p>Видання Limited Edition</p>
+          <p>Дизайн</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/лаб.jpg" alt="f" />
+          <p>Проєкт LAB</p>
+          <p>Маркетинг</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <p></p>
-          <p></p>
+          <img src="./img/ноут.jpg" alt="f" />
+          <p>Growing Business</p>
+          <p>Додаток</p>
         </li>
       </ul>
     </main>
