--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap" rel="stylesheet">
+
+    
     <link href="./css/style.css" />
   </head>
   <body>
     <header>
       <h1>
-        <a href="./index.html"> Webstudio </a>
+        <a class="web" href="./index.html"> Webstudio </a>
       </h1>
       <ul>
         <li>
@@ -24,27 +32,27 @@
 
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <li><a class="tel" href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <h1>
+      <section class="abc">
+        <h1 class="h1">
           Ефективні рішення для<br />
           вашого бізнесу
         </h1>
 
-        <button>Замовити послугу</button>
+        <button class="btn">Замовити послугу</button>
       </section>
-      <section>
+      <section >
         <ul>
           <li>
             <h3>Увага до деталей</h3>
 
-            <p>
+            <p class="var">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
@@ -52,15 +60,19 @@
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
 
-            <p>
+            <p class="var">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
+          <h3>ПЛАНУВАННЯ</h3>
+          <p class="var">Так само консультація з широким активом значною мірою зумовлює.</p>
+          </li>
+          <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 
-            <p>
+            <p class="var">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -68,7 +80,7 @@
         </ul>
       </section>
       <section>
-        <h2>Чим ми займаємося</h2>
+        <h2 class="section1">Чим ми займаємося</h2>
         <ul>
           <li><img src="./img/клава.jpg" alt="f" /></li>
           <li><img src="./img/тел.jpg" alt="f" /></li>
@@ -76,33 +88,33 @@
         </ul>
       </section>
       <section>
-        <h2>наша команда</h2>
+        <h2 class="section1">наша команда</h2>
         <ul>
           <li>
             <img src="./img/ігор.jpg" alt="f" />
-            <p><b>Ігор Дем'яненко</b></p>
-            <p>Product Designer</p>
+            <p class="name">Ігор Дем'яненко</p>
+            <p class="job">Product Designer</p>
           </li>
           <li>
             <img src="./img/ольга.jpg" alt="f" />
-            <p><b>Ольга Рєпіна</b></p>
-            <p>Frontend Developer</p>
+            <p class="name">Ольга Рєпіна</p>
+            <p class="job">Frontend Developer</p>
           </li>
           <li>
             <img src="./img/тарас.jpg" alt="f" />
-            <p><b>Микола Тарасов</b></p>
-            <p>Marketing</p>
+            <p class="name">Микола Тарасов</p>
+            <p class="job">Marketing</p>
           </li>
           <li>
             <img src="./img/міша.jpg" alt="f" />
-            <p><b>Михайло Єрмаков</b></p>
-            <p>UI Designer</p>
+            <p class="name">Михайло Єрмаков</p>
+            <p class="job">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"> Webstudio </a>
+    <footer class="abc">
+      <a class="web" href="./index.html"> Webstudio </a>
       <address>
         м. Київ, пр-т Лесі Українки,<br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
