--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
-    
     <link href="./css/style.css" />
   </head>
   <body>
     <header>
       <h1>
-        <a class="web" href="./index.html"> Webstudio </a>
+        <a class="header_title" href="./index.html"> Webstudio </a>
       </h1>
       <ul>
         <li>
@@ -32,27 +38,31 @@
 
       <ul>
         <li>
-          <a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header_main" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li><a class="tel" href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <li>
+          <a class="header_tel" href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
     <main>
-      <section class="abc">
-        <h1 class="h1">
+      <section class="section">
+        <h1 class="section_h1">
           Ефективні рішення для<br />
           вашого бізнесу
         </h1>
 
         <button class="btn">Замовити послугу</button>
       </section>
-      <section >
+      <section>
         <ul>
           <li>
             <h3>Увага до деталей</h3>
 
-            <p class="var">
+            <p class="section_p">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
@@ -60,19 +70,21 @@
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
 
-            <p class="var">
+            <p class="section_p">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-          <h3>ПЛАНУВАННЯ</h3>
-          <p class="var">Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p class="section_p">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 
-            <p class="var">
+            <p class="section_p">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -113,8 +125,8 @@
         </ul>
       </section>
     </main>
-    <footer class="abc">
-      <a class="web" href="./index.html"> Webstudio </a>
+    <footer class="footer">
+      <a class="footer_a" href="./index.html"> Webstudio </a>
       <address>
         м. Київ, пр-т Лесі Українки,<br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
