--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </ul>
       </section>
       <section>
+        
         <h2 class="section1">Чим ми займаємося</h2>
         <ul>
           <li><img src="./img/клава.jpg" alt="f" /></li>
@@ -96,26 +97,26 @@
           <li><img src="./img/план.jpg" alt="f" /></li>
         </ul>
       </section>
-      <section>
+      <section class="container">
         <h2 class="section1">наша команда</h2>
         <ul>
           <li>
-            <img src="./img/ігор.jpg" alt="f" />
+            <img src="./img/ігор.jpg" class="section_foto1" alt="f" />
             <p class="name">Ігор Дем'яненко</p>
             <p class="job">Product Designer</p>
           </li>
           <li>
-            <img src="./img/ольга.jpg" alt="f" />
+            <img src="./img/ольга.jpg" class="section_foto2" alt="f" />
             <p class="name">Ольга Рєпіна</p>
             <p class="job">Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/тарас.jpg" alt="f" />
+            <img src="./img/тарас.jpg" class="section_foto3" alt="f" />
             <p class="name">Микола Тарасов</p>
             <p class="job">Marketing</p>
           </li>
           <li>
-            <img src="./img/міша.jpg" alt="f" />
+            <img src="./img/міша.jpg" class="section_foto4" alt="f" />
             <p class="name">Михайло Єрмаков</p>
             <p class="job">UI Designer</p>
           </li>
