--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <button class="btn">Замовити послугу</button>
       </section>
       <section>
+        <div class="container">
         <ul>
           <li>
             <h3>Увага до деталей</h3>
@@ -87,6 +88,7 @@
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <section>
         
@@ -98,6 +100,7 @@
         </ul>
       </section>
       <section class="container">
+        <div class="container">
         <h2 class="section1">наша команда</h2>
         <ul>
           <li>
@@ -121,6 +124,7 @@
             <p class="job">UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
