--- a/portfolio.html
+++ b/portfolio.html
@@ -19,24 +19,24 @@
   <body>
     <header>
       <h1>
-        <a href="./index.html"> Webstudio </a>
+        <a class="header_topik" href="./index.html"> Webstudio </a>
       </h1>
       <ul>
         <li>
-          <a href="./index.html">студія</a>
+          <a class="header_title" href="./index.html">студія</a>
         </li>
 
         <li>
-          <a href="./portfolio.html">Портфоліо</a>
+          <a class="header_title" href="./portfolio.html">Портфоліо</a>
         </li>
-        <li><a href="./contacts.html">контакти</a></li>
+        <li><a class="header_title" href="./contacts.html">контакти</a></li>
       </ul>
 
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header_title" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li><a href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        <li><a class="header_title" href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -47,7 +47,8 @@
         <li><button>Дизайн</button></li>
         <li><button>Маркетинг</button></li>
       </ul>
-      <ul>
+
+      <ul class="container">
         <li>
           <img src="./img/22.jpg" alt="f" />
           <p>Технокряк</p>
