--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
         <li><button>Маркетинг</button></li>
       </ul>
 
-      <ul class="container">
+      <ul class="container portfolio_img">
         <li>
           <img src="./img/22.jpg" alt="f" />
           <p>Технокряк</p>
