--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
       <h1>
         <a class="header_logo" href="./index.html"> Webstudio </a>
       </h1>
-      <ul>
+      <ul class="header_list">
         <li
-          <a class="header_title"  href="./index.html ">студія</a>
+          <a class="header_item_studio"  href="./index.html ">студія</a>
         </li>
 
         <li>
-          <a class="header_title" href="./portfolio.html">Портфоліо</a>
+          <a class="header_item" href="./portfolio.html">Портфоліо</a>
         </li>
-        <li><a class="header_contact" href="./contacts.html">контакти</a></li>
-      </ul>
+        <li><a class="header_item" href="./contacts.html">контакти</a></li>
+      
 
-      <ul>
+      
         <li>
           <a class="header_main" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
