--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </section>
       <section>
         <div class="container">
-        <ul>
+        <ul class="section_list">
           <li>
             <h3>Увага до деталей</h3>
 
@@ -96,7 +96,7 @@
       </section>
       <section>
         <div>
-        <h2 class="section">Чим ми займаємося</h2>
+        <h2 class="section team_text">Чим ми займаємося</h2>
       
     
 
