--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </section>
       <section>
         <div>
-        <h2 class="section team_text">Чим ми займаємося</h2>
+        <h2 class="section main_team">Чим ми займаємося</h2>
       
     
 
