--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <header>
+      <h1>
+        <a class="header_logo" href="./index.html"> Webstudio </a>
+      </h1>
+      <ul class="header_list">
+        <li
+          <a class="header_item_studio"  href="./index.html ">студія</a>
+        </li>
+
+        <li>
+          <a class="header_item" href="./portfolio.html">Портфоліо</a>
+        </li>
+        <li><a class="header_item" href="./contacts.html">контакти</a></li>
+      
+
+      
+        <li>
+          <a class="header_main" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="header_tel" href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
   <body>
     <p><b>Ігор Дем'яненко</b></p>
     <p>Product Designer</p>
@@ -19,4 +45,12 @@
     <p>Marketing</p>
     <p>+387430903973</p>
   </body>
+      <footer class="footer">
+      <a class="footer_link" href="./index.html"> Webstudio </a>
+      <address>
+        м. Київ, пр-т Лесі Українки,<br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+        <a href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
+      </address>
+    </footer>
 </html>
