--- a/portfolio.html
+++ b/portfolio.html
@@ -17,30 +17,38 @@
   </head>
 
   <body>
-    <header>
+  <header class="header">
+      <div class="container flex">
       <h1>
-        <a class="header_topik" href="./index.html"> Webstudio </a>
+        <a class="header_logo" href="./index.html"> Webstudio </a>
       </h1>
-      <ul>
+      <ul class="header_list">
         <li>
-          <a class="header_title" href="./index.html">студія</a>
+          <a class="header_item" href="./index.html ">студія</a>
         </li>
 
         <li>
-          <a class="header_title" href="./portfolio.html">Портфоліо</a>
+          <a class="header_item" href="./portfolio.html">Портфоліо</a>
         </li>
-        <li><a class="header_title" href="./contacts.html">контакти</a></li>
-      </ul>
+        <li><a class="header_item" href="./contacts.html">контакти</a></li>
 
-      <ul>
-        <li>
-          <a class="header_title" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li><a class="header_title" href="tell:+38 096 111 11 11">+38 096 111 11 11</a></li>
       </ul>
+<ul class="header_contact">
+      
+        <li>
+          <a class="header_contact_item" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="header_contact_item" href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
+        </li>
+      </ul>
+      </div>
     </header>
-    <main>
-      <ul>
+    <main class="portfolio">
+      <div class="container">
+      <ul class="btn_list">
         <li><button>Усі</button></li>
         <li><button>Веб-сайти</button></li>
         <li><button>Додатки</button></li>
@@ -48,7 +56,7 @@
         <li><button>Маркетинг</button></li>
       </ul>
 
-      <ul class="container portfolio_img">
+      <ul class="portfolio_list">
         <li>
           <img src="./img/22.jpg" alt="f" />
           <p>Технокряк</p>
@@ -95,14 +103,17 @@
           <p>Додаток</p>
         </li>
       </ul>
+      </div>
     </main>
-    <footer>
-      <a href="./index.html"> Webstudio </a>
+   <footer class="footer">
+      <div class="container">
+      <a class="footer_link" href="./index.html"> Webstudio </a>
       <address>
         м. Київ, пр-т Лесі Українки,<br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
         <a href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
       </address>
+      </div>
     </footer>
   </body>
 </html>
