--- a/portfolio.html
+++ b/portfolio.html
@@ -49,11 +49,11 @@
     <main class="portfolio">
       <div class="container">
       <ul class="btn_list">
-        <li><button>Усі</button></li>
-        <li><button>Веб-сайти</button></li>
-        <li><button>Додатки</button></li>
-        <li><button>Дизайн</button></li>
-        <li><button>Маркетинг</button></li>
+        <li><button class="portfolio_btn">Усі</button></li>
+        <li><button class="portfolio_btn">Веб-сайти</button></li>
+        <li><button class="portfolio_btn">Додатки</button></li>
+        <li><button class="portfolio_btn">Дизайн</button></li>
+        <li><button class="portfolio_btn">Маркетинг</button></li>
       </ul>
 
       <ul class="portfolio_list">
