--- a/index.html
+++ b/index.html
@@ -113,21 +113,115 @@
             <img src="./img/ігор.jpg" class="section_foto" alt="f" />
             <p class="team_name">Ігор Дем'яненко</p>
             <p class="team_job">Product Designer</p>
+             <ul class="social_list">
+            <li class="social_item">
+                <svg class="social_icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+            </li>
+         </ul>
           </li>
           <li class="team_item">
             <img src="./img/ольга.jpg" class="section_foto" alt="f" />
             <p class="team_name">Ольга Рєпіна</p>
             <p class="team_job">Frontend Developer</p>
+             <ul class="social_list">
+            <li class="social_item">
+                <svg class="social_icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+            </li>
+         </ul>
           </li>
           <li class="team_item">
             <img src="./img/тарас.jpg" class="section_foto" alt="f" />
             <p class="team_name">Микола Тарасов</p>
-            <p class="team_job">Marketing</p>
+            <p class="team_job">Marketing</p> <ul class="social_list">
+            <li class="social_item">
+                <svg class="social_icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+            </li>
+         </ul>
           </li>
           <li class="team_item">
             <img src="./img/міша.jpg" class="section_foto" alt="f" />
             <p class="team_name">Михайло Єрмаков</p>
-            <p class="team_job">UI Designer</p>
+            <p class="team_job">UI Designer</p> <ul class="social_list">
+            <li class="social_item">
+                <svg class="social_icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+            </li>
+         </ul>
           </li>
         </ul>
         </div>
