--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
           <li class="team_item">
             <img src="./img/міша.jpg" class="section_foto" alt="f" />
             <p class="team_name">Михайло Єрмаков</p>
-            <p class="team_job">UI Designer</p> <ul class="social_list">
+            <p class="team_job">UI Designer</p>
+             <ul class="social_list">
             <li class="social_item">
                 <svg class="social_icon">
                     <use href="./img/symbol-defs.svg#icon-instagram"></use>
@@ -226,16 +227,82 @@
         </ul>
         </div>
       </section>
+<section>
+  <h3 class="regular_client">постійні клієнти</h3>
+  <div>
+       <ul class="client_list">
+            <li class="client_item">
+                <svg class="client_icon">
+                    <use href="./img/symbol-defs.svg#icon-0"></use>
+                </svg>
+
+            </li>
+            <li class="client_item">
+                <svg class="client_icon">
+                     <use href=""></use>
+                </svg>
+            </li>
+            <li class="client_item">
+                <svg class="client_icon">
+                     <use href=""></use>
+                </svg>
+
+            </li>
+            <li class="client_item">
+                <svg class="client_icon">
+                     <use href=""></use>
+                </svg>
+            </li>
+            <li class="client_item">
+                <svg class="client_icon">
+                     <use href=""></use>
+                </svg>
+            </li>
+            <li class="client_item">
+                <svg class="client_icon">
+                     <use href=""></use>
+                </svg>
+            </li>
+         </ul>
+  </div>
+</section>
+
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer_adress">
       <a class="footer_link" href="./index.html"> Webstudio </a>
       <address>
         м. Київ, пр-т Лесі Українки,<br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
         <a href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
-      </address>
+     
       </div>
+         <p class="messenger">Приєднуйтесь</p>
+            <ul class="social_list">
+            <li class="social_item">
+                <svg class="social_icon">
+                    <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+
+            </li>
+            <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+            </li>
+         </ul>
+          </address>
     </footer>
   </body>
 </html>
