--- a/index.html
+++ b/index.html
@@ -35,12 +35,21 @@
 
       </ul>
 <ul class="header_contact">
-      
+        <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+            </li>
         <li>
           <a class="header_contact_item" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
+          <li class="social_item">
+                <svg class="social_icon">
+                     <use href="./img/symbol-defs.svg#icon-phone"></use>
+                </svg>
+            </li>
         <li>
           <a class="header_contact_item" href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
         </li>
