--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       </ul>
 <ul class="header_contact">
-        <li class="social_item">
+        <li class="social_header_item">
                 <svg class="social_icon">
                      <use href="./img/symbol-defs.svg#icon-envelope"></use>
                 </svg>
@@ -45,7 +45,7 @@
             >info@devstudio.com</a
           >
         </li>
-          <li class="social_item">
+          <li class="social_header_item">
                 <svg class="social_icon">
                      <use href="./img/symbol-defs.svg#icon-phone"></use>
                 </svg>
