--- a/index.html
+++ b/index.html
@@ -242,34 +242,34 @@
        <ul class="client_list">
             <li class="client_item">
                 <svg class="client_icon">
-                    <use href="./img/symbol-defs.svg#icon-0"></use>
+                    <use href="./img/symbol-defs.svg#icon-rect"></use>
                 </svg>
 
             </li>
             <li class="client_item">
                 <svg class="client_icon">
-                     <use href=""></use>
+                     <use href="./img/symbol-defs.svg#icon-book"></use>
                 </svg>
             </li>
             <li class="client_item">
                 <svg class="client_icon">
-                     <use href=""></use>
+                     <use href="./img/symbol-defs.svg#icon-Leav"></use>
                 </svg>
 
             </li>
             <li class="client_item">
                 <svg class="client_icon">
-                     <use href=""></use>
+                     <use href="./img/symbol-defs.svg#icon-pool"></use>
                 </svg>
             </li>
             <li class="client_item">
                 <svg class="client_icon">
-                     <use href=""></use>
+                     <use href="./img/symbol-defs.svg#icon-plant"></use>
                 </svg>
             </li>
             <li class="client_item">
                 <svg class="client_icon">
-                     <use href=""></use>
+                     <use href="./img/symbol-defs.svg#icon-box"></use>
                 </svg>
             </li>
          </ul>
