--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
                 </svg>
             </li>
         <li>
-          <a class="header_contact_item" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+          <a class="header_contact_item" href="mailto:info@devstudio.com">
+         
+            info@devstudio.com</a>
+          
         </li>
           <li class="social_header_item">
                 <svg class="social_icon">
