--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         </ul>
         </div>
       </section>
-<section>
+<section class="clientse">
   <h3 class="regular_client">постійні клієнти</h3>
   <div>
        <ul class="client_list">
@@ -277,13 +277,15 @@
     </main>
     <footer class="footer">
       <div class="container footer_adress">
+        <div>
       <a class="footer_link" href="./index.html"> Webstudio </a>
       <address>
         м. Київ, пр-т Лесі Українки,<br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
         <a href="tell:+38 096 111 11 11">+38 096 111 11 11</a>
-     
+     </address>
       </div>
+      <div class="fotteer">
          <p class="messenger">Приєднуйтесь</p>
             <ul class="social_list">
             <li class="social_item">
@@ -309,7 +311,8 @@
                 </svg>
             </li>
          </ul>
-          </address>
+         </div>
+        </div>
     </footer>
   </body>
 </html>
