--- a/index.html
+++ b/index.html
@@ -105,9 +105,12 @@
         <h2 class="section_title">Чим ми займаємося</h2>
   <ul class="section_list">
     
-          <li><img src="./img/клава.jpg" alt="f" /></li>
-          <li><img src="./img/тел.jpg" alt="f" /></li>
-          <li><img src="./img/план.jpg" alt="f" /></li>
+          <li><img src="./img/клава.jpg" alt="f" />f</li>
+<div class="section_layer">декстопні Додатки</div>
+          <li><img src="./img/тел.jpg" alt="f" />f</li>
+<div class="section_layer">мобільні Додатки</div>
+          <li><img src="./img/план.jpg" alt="f" />f</li>
+<div class="section_layer">дизайнерскі рішення</div>
   </ul>
         </div>
       
