--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
   <ul class="section_list">
     
           <li><img src="./img/клава.jpg" alt="f" />f</li>
-<div class="section_layer">декстопні Додатки</div>
+<span class="section_layer">декстопні додатки</span>
           <li><img src="./img/тел.jpg" alt="f" />f</li>
-<div class="section_layer">мобільні Додатки</div>
+<span class="section_layer">мобільні додатки</span>
           <li><img src="./img/план.jpg" alt="f" />f</li>
-<div class="section_layer">дизайнерскі рішення</div>
+><span class="section_layer">дзайнерські рішення</span>
   </ul>
         </div>
       
