--- a/index.html
+++ b/index.html
@@ -105,12 +105,14 @@
         <h2 class="section_title">Чим ми займаємося</h2>
   <ul class="section_list">
     
-          <li><img src="./img/клава.jpg" alt="f" /></li>
-<span class="section_layer"><p class="layer_text">декстопні додатки</p></span>
-          <li><img src="./img/тел.jpg" alt="f" /></li>
-<span class="section_layer_2"><p class="layer_text">мобільні додатки</p></span>
-          <li><img src="./img/план.jpg" alt="f" /></li>
-<span class="section_layer_3"><p class="layer_text">дзайнерські рішення</p></span>
+          <li class="section_li"><img src="./img/клава.jpg" alt="f" />
+<p class="section_layer layer_text">декстопні додатки</p></li>
+
+          <li class="section_li"><img src="./img/тел.jpg" alt="f" />
+<p class="section_layer layer_text">мобільні додатки</p></li>
+
+          <li class="section_li"><img src="./img/план.jpg" alt="f" />
+<p class="section_layer layer_text">дзайнерські рішення</p></li>
   </ul>
         </div>
       
