--- a/index.html
+++ b/index.html
@@ -329,33 +329,31 @@
 <form class="modal_form">
   <h1 class="modal_text">Залиште свої дані, ми вам передзвонимо</h1>
   <label class="modal_label">
-    <span>Введіть ім`я</span>
+    <span>Ім`я</span>
     <input
     type="text"
-    plaseholder="Твоє Ім`я"
     required
     >
   </label>
 <label class="modal_label">
-      <span> Введіть номер телефону</span>
+      <span>Номер телефону</span>
     <input type="tel"
-    plaseholder="Твій номер телефону"
     minlength="9"
+    maxlength="9"
      required
     >
 </label>
 <label class="modal_label">
-      <span>Введіть email</span>
-    <input type="email"
-    plaseholder="Твій email"
-    minlength="4"
-     required
+      <span>Пошта</span>
+    <input
+    type="email"
+    required
     >
 </label>
 <label class="modal_label">
       <span>Коментар</span>
-    <input type="text"
-
+    <input 
+     type="text"
     >
 </label>
 <label class="modal_label">
