--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
 </label>
 <label class="modal_label">
       <span>Коментар</span>
-    <input 
-     type="text"
+    <input class="aaa"
+     type="textarea"
     >
 </label>
 <label class="modal_label">
