--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
         </li>
 
         <li>
-          <a class="header_item" href="./portfolio.html">Портфоліо</a>
+          <a class="header_item header_portfolio" href="./portfolio.html">Портфоліо</a>
         </li>
         <li><a class="header_item" href="./contacts.html">контакти</a></li>
 
