--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+       <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
   </head>
  <header class="header">
@@ -19,7 +27,7 @@
         <li>
           <a class="header_item" href="./portfolio.html">Портфоліо</a>
         </li>
-        <li><a class="header_item_contact" href="./contacts.html">контакти</a></li>
+        <li><a class="header_item header-contact" href="./contacts.html">контакти</a></li>
 
       </ul>
 <ul class="header_contact">
@@ -43,18 +51,20 @@
       </div>
     </header>
   <body>
-    <p><b>Ігор Дем'яненко</b></p>
-    <p>Product Designer</p>
-    <p>+380977584639</p>
-    <p><b>Ольга Рєпіна</b></p>
-    <p>Frontend Developer</p>
-    <p>+385007911658</p>
-    <p><b>Михайло Єрмаков</b></p>
-    <p>UI Designer</p>
-    <p>+382006487583</p>
-    <p><b>Микола Тарасов</b></p>
-    <p>Marketing</p>
-    <p>+387430903973</p>
+    <ul>
+      <li>Ігор Дем'яненко</li>
+      <li>Product Designer</li>
+      <li>+380977584639</li>
+      <li>Ольга Рєпіна</li>
+      <li>rontend Developer</li>
+      <li>+385007911658</li>
+      <li>Михайло Єрмаков</li>
+      <li>UI Designer</li>
+      <li>+382006487583</li>
+      <li>Микола Тарасов</li>
+      <li> Marketing</li>
+      <li>+387430903973</li>
+    </ul>
   </body>
       <footer class="footer">
       <a class="footer_link" href="./index.html"> Webstudio </a>
