--- a/portfolio.html
+++ b/portfolio.html
@@ -58,47 +58,72 @@
 
       <ul class="portfolio_list">
         <li>
+          <div class="div_box">
           <img src="./img/22.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Технокряк</p>
           <p>Веб-сайт</p>
         </li>
         <li>
+          <div class="div_box">
           <img src="./img/акула.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Постер New Orlean vs Golden Star</p>
           <p>Дизайн</p>
         </li>
         <li>
+          <div class="div_box">
           <img src="./img/ресторан.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Ресторан Seafood</p>
           <p>Додаток</p>
         </li>
         <li>
+          <div class="div_box">
           <img src="./img/наушники.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Проєкт Prime</p>
           <p>Маркетинг</p>
         </li>
         <li>
+          <div class="div_box">
           <img src="./img/коробки.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Проєкт Boxes</p>
           <p>Додаток</p>
         </li>
         <li>
+          <div class="div_box">
           <img src="./img/монітор.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Inspiration has no Borders</p>
           <p>Веб-сайт</p>
         </li>
         <li>
+          <div class="div_box">
           <img src="./img/книга.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Видання Limited Edition</p>
           <p>Дизайн</p>
         </li>
-        <li>
+        <li><div class="div_box">
           <img src="./img/лаб.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Проєкт LAB</p>
           <p>Маркетинг</p>
         </li>
-        <li>
+        <li><div class="div_box">
           <img src="./img/ноут.jpg" alt="f" />
+          <div class="overlay">Дізнатися як пройшов матч</div>
+          </div>
           <p>Growing Business</p>
           <p>Додаток</p>
         </li>
