--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </li>
             <li class="social_item">
                 <svg class="social_icon">
-                     <use href="./img/symbol-defs.svg#iopn-facebook"></use>
+                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
                 </svg>
 
             </li>
