--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
         <li>
           <div class="div_box">
           <img src="./img/22.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Технокряк</p>
           <p>Веб-сайт</p>
@@ -68,7 +68,7 @@
         <li>
           <div class="div_box">
           <img src="./img/акула.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Постер New Orlean vs Golden Star</p>
           <p>Дизайн</p>
@@ -76,7 +76,7 @@
         <li>
           <div class="div_box">
           <img src="./img/ресторан.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Ресторан Seafood</p>
           <p>Додаток</p>
@@ -84,7 +84,7 @@
         <li>
           <div class="div_box">
           <img src="./img/наушники.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Проєкт Prime</p>
           <p>Маркетинг</p>
@@ -92,7 +92,7 @@
         <li>
           <div class="div_box">
           <img src="./img/коробки.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Проєкт Boxes</p>
           <p>Додаток</p>
@@ -100,7 +100,7 @@
         <li>
           <div class="div_box">
           <img src="./img/монітор.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Inspiration has no Borders</p>
           <p>Веб-сайт</p>
@@ -108,21 +108,21 @@
         <li>
           <div class="div_box">
           <img src="./img/книга.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Видання Limited Edition</p>
           <p>Дизайн</p>
         </li>
         <li><div class="div_box">
           <img src="./img/лаб.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Проєкт LAB</p>
           <p>Маркетинг</p>
         </li>
         <li><div class="div_box">
           <img src="./img/ноут.jpg" alt="f" />
-          <div class="overlay">Дізнатися як пройшов матч</div>
+          <div class="overlay">Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</div>
           </div>
           <p>Growing Business</p>
           <p>Додаток</p>
