--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       </ul>
 <ul class="header_contact">
-        <li>
+        <li class="header_contact_email">
           <a class="header_contact_item" href="mailto:info@devstudio.com">
                   <svg class="social_icon">
                      <use href="./img/symbol-defs.svg#icon-envelope"></use>
@@ -42,7 +42,7 @@
           
         </li>
 
-        <li>
+        <li class="header_contac_tel">
           <a class="header_contact_item" href="tell:+38 096 111 11 11">
                 <svg class="social_icon">
                      <use href="./img/symbol-defs.svg#icon-phone"></use>
