--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="section">
         <div class="container">
         <ul class="section_list">
-          <li>
+          <li class="section_item">
             <h3 class="section_subtitle">Увага до деталей</h3>
 
             <p class="section_text">
@@ -74,7 +74,7 @@
               формування позиції.
             </p>
           </li>
-          <li>
+          <li class="section_item">
             <h3 class="section_subtitle">ПУНКТУАЛЬНІСТЬ</h3>
 
             <p class="section_text">
@@ -82,13 +82,13 @@
               у себе.
             </p>
           </li>
-          <li>
+          <li class="section_item">
             <h3 class="section_subtitle">ПЛАНУВАННЯ</h3>
             <p class="section_text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+          <li class="section_item">
             <h3 class="section_subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
 
             <p class="section_text">
